--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@
     width: 300px;
     margin: 30px;
 }
+
+* {
+    /* background: #F6F1EB; */
+}
+
+#portfolio-card {
+    height: 500px;
+}
+
+#home-photo {
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
